// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal #handleClick opens modal 1`] = `
<body
  class="no-scroll"
  style="padding-right: 1024px;"
>
  
  
  <button
    data-target="modal-id"
  >
    Open modal
  </button>
  

  
  <div
    aria-hidden="false"
    classname="modal-overlay"
    data-modal="modal-id"
    data-visible="true"
  >
    
    
    <div
      aria-labelledby="header-id"
      aria-modal="true"
      classname="modal-dialog"
      data-parent="modal-id"
      role="dialog"
      tabindex="-1"
    >
      
      
      <header>
        
        
        <h2
          classname="h6 has-no-m-block-start"
          id="header-id"
        >
          
          Modal Header
        
        </h2>
        
        
        <a
          data-close=""
          href="#"
          tabindex="0"
        >
          
          
          <span
            aria-hidden="true"
          >
            ×
          </span>
          
        
        </a>
        
      
      </header>
      
      
      <section>
        
        
        <p>
          Some modal content here
        </p>
        
      
      </section>
      
      
      <footer>
        
        
        <a
          classname="button"
          data-close=""
          href="#"
          tabindex="0"
        >
          
          Cancel
        
        </a>
        
        
        <a
          classname="primary button"
          href="#"
          tabindex="0"
        >
          
          OK
        
        </a>
        
      
      </footer>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Modal #handleClose closes modal 1`] = `
<body
  class=""
  style="padding-right: 1024px;"
>
  
  
  <button
    data-target="modal-id"
    tabindex="-1"
  >
    Open modal
  </button>
  

  
  <div
    aria-hidden="true"
    classname="modal-overlay"
    data-modal="modal-id"
    data-visible="false"
    style="padding-left: 1024px;"
  >
    
    
    <div
      aria-labelledby="header-id"
      aria-modal="true"
      classname="modal-dialog"
      data-parent="modal-id"
      role="dialog"
    >
      
      
      <header>
        
        
        <h2
          classname="h6 has-no-m-block-start"
          id="header-id"
        >
          
          Modal Header
        
        </h2>
        
        
        <a
          data-close=""
          href="#"
          tabindex="-1"
        >
          
          
          <span
            aria-hidden="true"
          >
            ×
          </span>
          
        
        </a>
        
      
      </header>
      
      
      <section>
        
        
        <p>
          Some modal content here
        </p>
        
      
      </section>
      
      
      <footer>
        
        
        <a
          classname="button"
          data-close=""
          href="#"
          tabindex="-1"
        >
          
          Cancel
        
        </a>
        
        
        <a
          classname="primary button"
          href="#"
          tabindex="-1"
        >
          
          OK
        
        </a>
        
      
      </footer>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Modal #handleEscapeKeyPress closes modal 1`] = `
<body
  class=""
  style="padding-right: 1024px;"
>
  
  
  <button
    data-target="modal-id"
    tabindex="-1"
  >
    Open modal
  </button>
  

  
  <div
    aria-hidden="true"
    classname="modal-overlay"
    data-modal="modal-id"
    data-visible="false"
    style="padding-left: 1024px;"
  >
    
    
    <div
      aria-labelledby="header-id"
      aria-modal="true"
      classname="modal-dialog"
      data-parent="modal-id"
      role="dialog"
    >
      
      
      <header>
        
        
        <h2
          classname="h6 has-no-m-block-start"
          id="header-id"
        >
          
          Modal Header
        
        </h2>
        
        
        <a
          data-close=""
          href="#"
          tabindex="-1"
        >
          
          
          <span
            aria-hidden="true"
          >
            ×
          </span>
          
        
        </a>
        
      
      </header>
      
      
      <section>
        
        
        <p>
          Some modal content here
        </p>
        
      
      </section>
      
      
      <footer>
        
        
        <a
          classname="button"
          data-close=""
          href="#"
          tabindex="-1"
        >
          
          Cancel
        
        </a>
        
        
        <a
          classname="primary button"
          href="#"
          tabindex="-1"
        >
          
          OK
        
        </a>
        
      
      </footer>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Modal #handleOverlayClick closes modal 1`] = `
<body
  class=""
  style="padding-right: 1024px;"
>
  
  
  <button
    data-target="modal-id"
    tabindex="-1"
  >
    Open modal
  </button>
  

  
  <div
    aria-hidden="true"
    classname="modal-overlay"
    data-modal="modal-id"
    data-visible="false"
    style="padding-left: 1024px;"
  >
    
    
    <div
      aria-labelledby="header-id"
      aria-modal="true"
      classname="modal-dialog"
      data-parent="modal-id"
      role="dialog"
    >
      
      
      <header>
        
        
        <h2
          classname="h6 has-no-m-block-start"
          id="header-id"
        >
          
          Modal Header
        
        </h2>
        
        
        <a
          data-close=""
          href="#"
          tabindex="-1"
        >
          
          
          <span
            aria-hidden="true"
          >
            ×
          </span>
          
        
        </a>
        
      
      </header>
      
      
      <section>
        
        
        <p>
          Some modal content here
        </p>
        
      
      </section>
      
      
      <footer>
        
        
        <a
          classname="button"
          data-close=""
          href="#"
          tabindex="-1"
        >
          
          Cancel
        
        </a>
        
        
        <a
          classname="primary button"
          href="#"
          tabindex="-1"
        >
          
          OK
        
        </a>
        
      
      </footer>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Modal API start sets attributes 1`] = `
<body>
  
  
  <button
    data-target="modal-id"
  >
    Open modal
  </button>
  

  
  <div
    aria-hidden="true"
    classname="modal-overlay"
    data-modal="modal-id"
    data-visible="false"
  >
    
    
    <div
      aria-labelledby="header-id"
      aria-modal="true"
      classname="modal-dialog"
      data-parent="modal-id"
      role="dialog"
    >
      
      
      <header>
        
        
        <h2
          classname="h6 has-no-m-block-start"
          id="header-id"
        >
          
          Modal Header
        
        </h2>
        
        
        <a
          data-close=""
          href="#"
          tabindex="-1"
        >
          
          
          <span
            aria-hidden="true"
          >
            ×
          </span>
          
        
        </a>
        
      
      </header>
      
      
      <section>
        
        
        <p>
          Some modal content here
        </p>
        
      
      </section>
      
      
      <footer>
        
        
        <a
          classname="button"
          data-close=""
          href="#"
          tabindex="-1"
        >
          
          Cancel
        
        </a>
        
        
        <a
          classname="primary button"
          href="#"
          tabindex="-1"
        >
          
          OK
        
        </a>
        
      
      </footer>
      
    
    </div>
    
  
  </div>
  

</body>
`;

exports[`Modal API stop + #handleClick does not open modal 1`] = `
<body>
  
  
  <button
    data-target="modal-id"
  >
    Open modal
  </button>
  

  
  <div
    aria-hidden="true"
    classname="modal-overlay"
    data-modal="modal-id"
    data-visible="false"
  >
    
    
    <div
      aria-labelledby="header-id"
      aria-modal="true"
      classname="modal-dialog"
      data-parent="modal-id"
      role="dialog"
    >
      
      
      <header>
        
        
        <h2
          classname="h6 has-no-m-block-start"
          id="header-id"
        >
          
          Modal Header
        
        </h2>
        
        
        <a
          data-close=""
          href="#"
          tabindex="-1"
        >
          
          
          <span
            aria-hidden="true"
          >
            ×
          </span>
          
        
        </a>
        
      
      </header>
      
      
      <section>
        
        
        <p>
          Some modal content here
        </p>
        
      
      </section>
      
      
      <footer>
        
        
        <a
          classname="button"
          data-close=""
          href="#"
          tabindex="-1"
        >
          
          Cancel
        
        </a>
        
        
        <a
          classname="primary button"
          href="#"
          tabindex="-1"
        >
          
          OK
        
        </a>
        
      
      </footer>
      
    
    </div>
    
  
  </div>
  

</body>
`;
